ConversationListItem: Prevent vertical scrollbar in name area

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -3773,7 +3773,7 @@ $timer-icons: '55', '50', '45', '40', '35', '30', '25', '20', '15', '10', '05',
 
   @include font-body-1-bold;
 
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 
